Revision history for Perl module XML::RSS
 
    - Now outputting an arrayref of <skipDays>/<day>'s and <skipHours>/<hours>
    properly.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978

1.38 - November 27, 2008
    - Added support for duplicate items of RSS modules.
        - http://rt.cpan.org/Public/Bug/Display.html?id=4495
    - Added support for multiple Dublin Core elements. One can point
    the field to an array and it will create multiple elements:
        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
    - Now parsing several <skipDays>/<day>s and <skipHours>/<hour>s into
    an array reference instead of concatenating them together.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978

1.37 - November 18, 2008
    - Extracted the common parts of parse() and parsefile() into one
    method (Refactoring - Shlomi Fish)
    - Incorporated a modified version of a patch from Simon Wistow to
    add support for the "xml:base" attribute.
    - Renamed t/items-are-0.t into the more descriptive 
    t/test-generated-items.t , to highlight its significance and make
    it easier to notice.
    - Enabled backwards-compatibility mode for the "description" item
    to not become a hash-ref by default if xml:base is specified.

1.36 - October 7, 2008
    - ->parse() now explicitly returns $self.
        - http://rt.cpan.org/Public/Bug/Display.html?id=34914
    - ->parsefile() now explicitly returns $self.
        - http://rt.cpan.org/Public/Bug/Display.html?id=34914
    - Applied a patch to change the RSS-0.91 DTD URL from my.netscape.com
    to rssboard.org:
        - http://rt.cpan.org/Ticket/Display.html?id=39780
    - Reformatted the Changes file to standardize on 4-space-indents.
    - Small documentation patch: (add_item with dc:date)
        - http://rt.cpan.org/Ticket/Display.html?id=39780

1.35 - September 13, 2008
    - Added a Module::Build-based Build.PL so we'll have an easier time 
    with the META.yml and the Kwalitee.