@@ -608,7 +608,7 @@ sub _is_rdf_resource {
 }
 
 sub _append_text_to_elem_struct {
-    my ($self, $struct, $cdata, $mapping_sub) = @_;
+    my ($self, $struct, $cdata, $mapping_sub, $is_array_sub) = @_;
 
     my $elem = $self->_current_element;
 
@@ -616,7 +616,12 @@ sub _append_text_to_elem_struct {
 
     # If it's in the default namespace
     if ($verdict) {
-        $self->_append_struct($struct, $mapping_sub->($struct, $elem), $cdata);
+        $self->_append_struct(
+            $struct,
+            scalar($mapping_sub->($struct, $elem)),
+            scalar($is_array_sub->($struct, $elem)),
+            $cdata
+        );
     }
     else {
         # If it's in another namespace
@@ -632,17 +637,32 @@ sub _append_text_to_elem_struct {
 }
 
 sub _append_struct {
-    my ($self, $struct, $key, $cdata) = @_;
-    if (defined $struct->{$key} && ref($struct->{$key}) eq 'HASH') {
-        $struct->{$key}->{content} .= $cdata;
-    } else {
-        $struct->{$key} .= $cdata;
+    my ($self, $struct, $key, $can_be_array, $cdata) = @_;
+    if (defined $struct->{$key}) {
+        if (ref($struct->{$key}) eq 'HASH') {
+            $struct->{$key}->{content} .= $cdata;
+            return;
+        }
+        elsif ($can_be_array && ref($struct->{$key}) eq 'ARRAY') {
+            $struct->{$key}->[-1] .= $cdata;
+            return;
+        }
     }
+
+    $struct->{$key} .= $cdata;
+    return;
 }
 
 sub _return_elem {
     my ($struct, $elem) = @_;
     return $elem;
+}
+
+sub _return_elem_is_array {
+    my ($struct, $elem) = @_;
+
+    # Always return false because no element should be an array.
+    return;
 }
 
 sub _append_text_to_elem {
@@ -652,6 +672,7 @@ sub _append_text_to_elem {
         $self->$ext_tag(),
         $cdata,
         \&_return_elem,
+        \&_return_elem_is_array,
     );
 }
 
@@ -677,6 +698,12 @@ sub _return_item_elem {
     }
 }
 
+sub _return_item_elem_is_array {
+    my ($item, $elem) = @_;
+
+    return ($elem eq "category");
+}
+
 sub _append_text_to_item {
     my ($self, $cdata) = @_;
 
@@ -688,6 +715,7 @@ sub _append_text_to_item {
         $self->_last_item,
         $cdata,
         \&_return_item_elem,
+        \&_return_item_elem_is_array
     );
 }
 
@@ -765,6 +793,24 @@ sub _should_be_hashref {
     );
 }
 
+sub _start_array_element_in_struct {
+    my ($self, $struct, $el) = @_;
+
+    # If it's an array - append a new empty element because a new one
+    # was started.
+    if (ref($struct->{$el}) eq "ARRAY") {
+        push @{$struct->{$el}}, "";
+    }
+    # If it's not an array but still full (i.e: it's only the second
+    # element), then turn it into an array
+    elsif (defined($struct->{$el}) && length($struct->{$el})) {
+        $struct->{$el} = [$struct->{$el}, ""];
+    }
+    # Else - do nothing and let the function append to the new array.
+    #
+    return 1;
+}
+
 sub _start_array_element {
     my ($self, $cat, $el) = @_;
 
@@ -772,18 +818,7 @@ sub _start_array_element {
         return;
     }
 
-    # If it's an array - append a new empty element because a new one
-    # was started.
-    if (ref($self->{$cat}->{$el}) eq "ARRAY") {
-        push @{$self->{$cat}->{$el}}, "";
-    }
-    # If it's not an array but still full (i.e: it's only the second
-    # element), then turn it into an array
-    elsif (defined($self->{$cat}->{$el}) && length($self->{$cat}->{$el})) {
-        $self->{$cat}->{$el} = [$self->{$cat}->{$el}, ""];
-    }
-    # Else - do nothing and let the function append to the new array.
-    
+    $self->_start_array_element_in_struct($self->{$cat}, $el);
     return 1;
 }
 
@@ -894,6 +929,12 @@ sub _handle_start {
 
         # beginning of taxo li element in item element
         #'http://purl.org/rss/1.0/modules/taxonomy/' => 'taxo'
+    }
+    elsif (
+           $self->_current_element eq "item"
+        && $el eq "category"
+    ) {
+        $self->_start_array_element_in_struct($self->_last_item, $el);
     }
     elsif (
         $parser->within_element(
